--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "node": "16.x"
   },
   "scripts": {
+    "dev": "npx nuxi dev",
     "dev-localhost": "NODE_TLS_REJECT_UNAUTHORIZED=0 npx nuxi dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
     "dev-custom": "NODE_TLS_REJECT_UNAUTHORIZED=0 npx nuxi dev --host nuxt.wip --https --ssl-cert nuxt.wip.pem --ssl-key nuxt.wip-key.pem"
   },
   "dependencies": {
-    "nuxt": "^3.0.0-rc.10"
+    "nuxt": "3.0.0-rc.13"
   }
 }
